test/libsolidity/syntaxTests/literalSuffixes/parsing/invalid_suffix_error.sol
error E1(uint) suffix;
// ----
// ParserError 2314: (15-21): Expected ';' but got identifier
